@@ -3,6 +3,7 @@ bloonix-heaven (0.5) released at 2014-XX-XX
     * Fixed collection process size statistics. /proc/$pid/statm
       is not available on other operation systems.
     * Implemented include and wrapper for Heaven/Template.pm.
+    * Making the template cache persistent.
 
 bloonix-heaven (0.4) released at 2014-11-03
 
